Scrollbars Designed & SidebarP Fixed

--- a/src/components/PostmortemComponents/SidebarP/SidebarP.scss
+++ b/src/components/PostmortemComponents/SidebarP/SidebarP.scss
@@ -6,7 +6,8 @@
     height: calc(100vh - 6rem);
     font-family: 'Segoe UI', 'Open Sans', sans-serif;
     background-color: $color-secondary-dark;
-    transition: width .3s;
+    overflow: hidden;
+    transition: all .3s;
 
     &__overlay {
         position: absolute;
@@ -71,6 +72,15 @@
     transition: width .3s;
 }
 
+@-webkit-keyframes slide {
+    100% { left: 0; }
+}
+
+@keyframes slide {
+    100% { left: 0; }
+
+} 
+
 .comments {
     position: relative;
     max-height: 60vh;
@@ -115,10 +125,11 @@
         color: rgba($color-white, .8);
         font-size: 1.6rem;
         height: 10rem;
-        width: 40rem;
+        width: 38rem;
         background-color: transparent;
         word-wrap: break-word;
         overflow-wrap: break-word;
+        overflow: auto;
     }
 
     &__edit-icon {
